6_networkpolicy/frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: svc-py-frontend
  name: svc-py-frontend
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: py-frontend
  type: ClusterIP
status:
  loadBalancer: {}
