6_networkpolicy/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: route-py-frontend
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: ""
    name: svc-py-frontend
    weight: null
status: {}
